jsx flag error 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "types": ["node"],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "jsx", "tsx", "ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
