--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "yarn sdks": "yarn dlx @yarnpkg/sdks vscode"
+    "yarn-sdks": "yarn dlx @yarnpkg/sdks vscode"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
