--- a/package.json
+++ b/package.json
@@ -9,24 +9,30 @@
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "yarn-sdks": "yarn dlx @yarnpkg/sdks vscode"
+    "sdks": "yarn dlx @yarnpkg/sdks vscode"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@types/node": "^18.11.13",
     "@yarnpkg/plugin-workspace-tools": "^4.0.0-rc.33",
+    "emotion-normalize": "^11.0.1",
     "emotion-reset": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@emotion/babel-plugin": "^11.10.5",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-links": "^6.5.13",
     "@storybook/builder-vite": "^0.2.5",
+    "@storybook/core-common": "^6.5.14",
+    "@storybook/node-logger": "^6.5.14",
+    "@storybook/preview-web": "^6.5.14",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "latest",
