--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    // ...rest of the template
-    "types": ["node"],
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
+    "types": ["vite-plugin-svgr/client", "@emotion/react/types/css-prop"]
   },
-  "include": ["src", "jsx", "tsx", "ts"],
+  "include": ["src", ".storybook/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
