--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,3 +4,7 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
 
 yarnPath: .yarn/releases/yarn-berry.cjs
+packageExtensions:
+  '@storybook/addon-docs@*':
+    dependencies:
+      '@babel/core': '*'
