--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,26 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
-    "types": ["vite-plugin-svgr/client", "@emotion/react/types/css-prop"],
-    "esModuleInterop": true
+    "incremental": true,
+    "baseUrl": "pages",
+    "paths": {},
+    "rootDir": ".",
+    "strictNullChecks": false,
+    "types": ["vite-plugin-svgr/client", "@emotion/react/types/css-prop"]
   },
-  "include": ["src", ".storybook/*"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
