--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 8000",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "sdks": "yarn dlx @yarnpkg/sdks vscode"
