--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
+    "msw": "^0.49.2",
+    "msw-storybook-addon": "^1.6.3",
     "stylelint": "^14.16.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-recommended-scss": "^8.0.0",
