--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "emotion-normalize": "^11.0.1",
     "emotion-reset": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-svgr": "^2.4.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -60,6 +59,7 @@
     "stylelint-config-recommended-scss": "^8.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
