--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
       "@src/*": ["src/*"],
       "@components/*": ["src/components/*"],
@@ -28,7 +28,6 @@
     "strictNullChecks": false,
     "types": [
       "node",
-      "vite/client",
       "vite-plugin-svgr/client",
       "@emotion/react/types/css-prop"
     ]
